kubernetis/app/mongo-deployment.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: mongo
  labels:
    app: crawler
    component: mongo
    comment-db: "true"
    post-db: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crawler
      component: mongo
  template:
    metadata:
      name: mongo
      labels:
        app: crawler
        component: mongo
        comment-db: "true"
        post-db: "true"
    spec:
      containers:
      - image: mongo:3.2
        name: mongo
        volumeMounts:
        - name: crawler-mongo-disk
          mountPath: /data/db
      volumes:
      - name: crawler-mongo-disk
        gcePersistentDisk:
            pdName: crawler-mongo-disk
            fsType: ext4
