kubernetis/app/crawler-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: crawler
  labels:
    app: crawler
    component: crawler
spec:
  ports:
  - port: 9292
    protocol: TCP
    targetPort: 9292
  selector:
    app: crawler
    component: crawler
