kubernetis/app/mongo-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: crawler
    component: mongo
spec:
  type: LoadBalancer
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: crawler
    component: mongo
