kubernetis/app/rabbitmq-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: crawler
    component: rabbitmq
spec:
  type: LoadBalancer
  ports:
  - name: rabbitmq
    nodePort: 30136
    port: 5672
    protocol: TCP
    targetPort: 5672
  - name: manager
    nodePort: 32699
    port: 15672
    protocol: TCP
    targetPort: 15672
  selector:
    app: crawler
    component: rabbitmq
