kubernetis/app/ui-crawler-mongodb-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ui-crawler-db
  labels:
    app: crawler
    component: mongo
    ui-crawler-db: "true"
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: crawler
    component: mongo
    ui-crawler-db: "true"
