kubernetis/app/ui-crawler-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ui-crawler
  labels:
    app: crawler
    component: ui-crawler
spec:
  type: LoadBalancer
  ports:
  - nodePort: 30440
    port: 8000
    protocol: TCP
    targetPort: 8000    
  selector:
    app: crawler
    component: ui-crawler
