kubernetis/app/rabbitmq-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rabbitmq
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: rabbitmq-ingress
  backend:
    serviceName: rabbitmq
    servicePort: 5672
