kubernetis/app/ui-crawler-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: ui-crawler          
          servicePort: 8000
